--- a/styles/Board.module.css
+++ b/styles/Board.module.css
@@ -2,6 +2,28 @@
     position: relative;
 }
 
+.controls{
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    background: var(--color-bg-primary);
+    padding: 0 20px 10px 20px;
+    min-width: 50vw;
+    border-radius:0 0 20px 20px;
+    border-bottom-left-radius:100% 100%;
+    border-bottom-right-radius:100% 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.controls .icon i{
+    color:var(--color-black);
+    margin: 0 20px ;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
 .img{
     position: absolute;
     right: 0;
