--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,32 +1,46 @@
-.board_conatiner{
+.container{
     margin-top: var(--navbar-height);
-    height: calc(100vh - var(--navbar-height));
+    min-height: calc(100vh - var(--navbar-height));
+    background-color: var(--color-bg-primary);
     position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
-.board{
-    transform: scale(2);
+.title{
+    background-color:White;
+    padding: 10px 20px;
+    margin: 30px;
+    border-radius: 100px;
+    cursor: pointer;
+    border: 2px solid var(--color-black);
 }
 
-.overlay{
-    position: absolute;
-    top: 0;
+.images{
     display: flex;
+    max-width: 85vw;
     align-items: center;
-    justify-content: center;
-    width: 100vw;
-    /* display: none; */
-    background: var(--color-bg-primary);
-    color: var(--color-black);
-    display: none;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
-@media screen and (max-width:769px)
-{
-    .overlay{
-        display: flex;
-    }
+.card {
+    border-radius: 20px;
+    background-color:White;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 300px;
+    margin: 10px;
+    word-wrap: normal;
+}
+  
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+  
+.desc {
+    padding: 2px 16px;
 }
