--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -36,6 +36,7 @@
     font-size: 1.5em;
     margin : 0 20px;  
     font-weight: 800;
+    cursor: pointer;
   }
   
   .nav_menu {
@@ -106,7 +107,7 @@
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
-      z-index: 1;
+      z-index: 100;
     }
   
   
