--- a/styles/Board.module.css
+++ b/styles/Board.module.css
@@ -9,6 +9,7 @@
     background: var(--color-bg-primary);
     padding: 0 20px 10px 20px;
     min-width: 50vw;
+    border-bottom: 2px solid rgba(122, 122, 122, 0.219);
     border-radius:0 0 20px 20px;
     border-bottom-left-radius:100% 100%;
     border-bottom-right-radius:100% 100%;
